2010-07-01  Konstantin Tokarev <annulen@yandex.ru>
	* src/confi.h.cmake: Added macros OB_VERSION_CHECK and OB_VERSION

2010-06-30  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefield.cpp: Set fixed atom constraints on rotor rules
	during rotamer/conformer searching, from Chris Wassman.

	* include/openbabel/base.h, src/base.cpp: Add OBReleaseVersion()
	global function, as suggested by Tobias Schmidt for code detection
	of versions and features. (Most useful from scripting interfaces,
	which won't have BABEL_VERSION as a macro.)

2010-06-29 Chris Morley

	* tools/babel.cpp, tools/obabel.cpp: -H no longer lists all formats
	  (As suggested by Noel)
	
	* include/openbabel/plugin.h: correct small error causing warning
	
	* src/format.cpp, src/plugin.cpp: small formatting changes in List
	output.

2010-06-29  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/charges/qeq* src/charges/qtpie* data/qeq.txt: Move QEq and
	QTPIE parameters to the data file. Parameters are possibly suspect
	for non-standard elements.  Jiahao Chen will send revised versions later.

	* data/UFF.prm: Remove QEq parameters -- not used by UFF.

2010-06-29 Noel O'Boyle

	* CMakeLists.txt: Avoid warnings with MinGW when compiling the exes

2010-06-29 Noel O'Boyle

	* src/formats/*format.cpp, src/formats/xml/*format.cpp: Edit some
	Descriptions() to replace Input with Read and Output with Write. Also
	uppercased any "options" to "Options".

2010-06-29 Noel O'Boyle

	* src/formats/xml/cmlformat.cpp: Partial fix for chiral N problems.
	See PR#3022295.

2010-0628 Chris Morley

	* include/openbabel/depict/depict.h, src/depict/depict.cpp:
	Use a bitset for options like drawTerminalC, so that extendable
	while binary compatible. Add a few more options display options.

	* src/formats/svgformat.cpp: add a few more display options.
	Augment Description() as a possible prototype for Noel's more
	formatted documentation.

2010-0628 Chris Morley
