@@ -343,7 +343,11 @@ public:
         "ADF TAPE41 format\n"
         "Read Options e.g. -as\n"
         "  s  Output single bonds only\n"
-        "  b  Disable bonding entirely\n\n";
+        "  b  Disable bonding entirely\n\n"
+	
+	"Currently the ADF Tape41 support reads grids from\n"
+       	"TAPE41 text files. To generate an ASCII version from\n"
+       	"the default binary, use the dmpkf program.\n\n";
     }
 
     /// Return a specification url, not really a specification since
