@@ -46,25 +46,34 @@ namespace OpenBabel {
 	
     virtual const char* Description() //required
     { return
-        "FastSearching\n"
-        "Uses molecular fingerprints in an index file.\n"
-"Writing to the fs format makes an index (a very slow process)\n"
-"  babel datafile.xxx index.fs\n"
-"Reading from the fs format does a fast search for:\n"
-"  Identical molecule\n"
+"FastSearching\n"
+"Uses molecular fingerprints in an index file.\n"
+"This format uses molecular fingerprints to prepare and search\n"
+"an index of a multi-molecule datafile. It allows fast substructure\n"
+"and structural similarity searching. The indexing is a slow process\n"
+"(~30 minutes for a 250,000 molecule file). The subsequent seaching\n"
+"is much faster, a few seconds, and so can be done interactively.\n\n"
+
+"Writing to the fs format makes an index (a very slow process)::\n\n"
+"  babel datafile.xxx index.fs\n\n"
+"Reading from the fs format does a fast search for:\n\n"
+"- Identical molecule::\n\n"
 "    babel index.fs -sSMILES outfile.yyy -ae  or\n"
-"    babel datafile.xxx -ifs -sSMILES outfile.yyy -ae\n"
-"  Substructure\n"
+"    babel datafile.xxx -ifs -sSMILES outfile.yyy -ae\n\n"
+"- Substructure::\n\n"
 "    babel index.fs -sSMILES outfile.yyy   or\n"
-"    babel datafile.xxx -ifs -sSMILES outfile.yyy\n"
-"  Molecular similarity based on Tanimoto coefficient\n"
+"    babel datafile.xxx -ifs -sSMILES outfile.yyy\n\n"
+"- Molecular similarity based on Tanimoto coefficient::\n\n"
 "    babel index.fs -sSMILES outfile.yyy -at0.7  (Tanimoto >0.7)\n"
 "    babel index.fs -sSMILES outfile.yyy -at0.7,0.9  (Tanimoto >0.7 && Tanimoto < 0.9)\n"
-"    babel index.fs -sSMILES outfile.yyy -at15   (best 15 molecules)\n"
+"    babel index.fs -sSMILES outfile.yyy -at15   (best 15 molecules)\n\n"
 "  The structure spec can be a molecule from a file: -Spatternfile.zzz\n\n"
 "Note that the parameter of the -s option needs to be a valid SMILES\n"
 "molecule when using fastsearch. You can use the more versatile SMARTS\n"
 "in a normal substructure search.\n\n"
+
+"For more information on using the FastSearch index format, see\n"
+"the user's tutorial.\n\n"
 
 "Write Options (when making index) e.g. -xfFP3\n"
 " f# Fingerprint type\n"
